@@ -21,13 +21,16 @@ user confusion thinking it does something different.
 Changes to Existing Features in 3.12.01
 =======================================
 [] Improved compare database reporting.
+[] If a field was empty e.g. user or notes, when the user requested it to be
+copied to the clipboard, no action was performed.  Now a field will always be
+copied whether it contains data or not.
 
 New Features for 3.12.01
 ========================
 [1904254] Search now selects all text fields by default.
 [1901380] Find result highlighted and selected.
-[1901380] If the Esc key is not being used to minimize PasswordSafe,
-then it will close the Find Toolbar if active.
+[1901380] If the Esc key is not being used to minimize PasswordSafe, then
+it will close the Find Toolbar if active.
 [1901380] F3 (Repeat Find) works even if the Find Toolbar has been closed.
 [] Last clipboard action now shown in Status Bar.
 
